<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SettingsActivity">

    <TextView
        android:id="@+id/aboutHeading"
        android:layout_width="285dp"
        android:layout_height="70dp"
        android:layout_marginTop="52dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/red_orange"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/settingsScrollable"
        android:layout_width="match_parent"
        android:layout_height="608dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/about_img"
        app:layout_constraintTop_toBottomOf="@+id/aboutHeading">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="600dp">

            <TextView
                android:id="@+id/isochroneTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="28dp"
                android:layout_marginTop="36dp"
                android:text="ISOCHRONE"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent" />

            <Switch
                android:id="@+id/isochroneSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/isochroneTextView"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="0dp"
                android:checked="false"
                android:elevation="10dp"
                android:paddingStart="28sp"
                android:paddingEnd="28sp"
                android:text="Isochrone Builder Switch"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ExplainTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/isochroneSwitch"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_vertical|end"
                android:layout_marginTop="16dp"
                android:paddingStart="20sp"
                android:paddingEnd="20sp"
                android:text="@string/settings_explanation_isochrone"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/isochroneSwitch" />

            <TextView
                android:id="@+id/midpointTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ExplainTextView"
                android:layout_alignParentStart="true"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                android:text="BEST MEETING PLACE"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent" />

            <Switch
                android:id="@+id/midpointSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/midpointTextView"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                android:checked="false"
                android:paddingStart="28sp"
                android:paddingEnd="28sp"
                android:text="Best Midpoint Marker Switch"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ExplainTextView" />

            <TextView
                android:id="@+id/explainTextView2"
                android:layout_width="match_parent"
                android:layout_height="216dp"
                android:layout_below="@+id/midpointSwitch"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_vertical|end"
                android:layout_marginTop="16dp"
                android:paddingStart="20sp"
                android:paddingEnd="20sp"
                android:text="@string/settings_explanation_midpoint"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/isochroneSwitch" />

        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>