...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteFavsBtn" />

    <Button
        android:id="@+id/settingsBtn"
        android:layout_width="164dp"
        android:layout_height="42dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/activity_profile_white_button"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearHistoryBtn" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="164dp"
        android:layout_height="42dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/activity_profile_white_button"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
...
